Gnome 43: Fix double borders and white text in context menus

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -2951,7 +2951,7 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background-color: #f8f8f8;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: none;
   border-radius: 5px;
   font: initial; }
   .csd menu,
@@ -3338,7 +3338,8 @@ popover.background {
     background-color: #f8f8f8;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4); }
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+    color: #31363d; }
   popover.background:backdrop {
     background-color: transparent;
     box-shadow: none; }
